[gd_scene load_steps=53 format=3 uid="uid://d0jou4iuydvkg"]

[ext_resource type="Script" uid="uid://cxkd8yvl5fi5l" path="res://scenes/player_finished/player.gd" id="1_wodsf"]
[ext_resource type="Texture2D" uid="uid://dnt7n2db610ps" path="res://assets/foxy/fox_hat_blade/fox_atk_1.png" id="2_007i1"]
[ext_resource type="Texture2D" uid="uid://bkabwrpxdc7cc" path="res://assets/foxy/fox_hat_blade/fox_atk_2.png" id="3_6cv16"]
[ext_resource type="Texture2D" uid="uid://dkd08e8lorvee" path="res://assets/foxy/fox_hat/fox_defeat_1.png" id="4_c35mf"]
[ext_resource type="Texture2D" uid="uid://byd3g4nnxwfcq" path="res://assets/foxy/fox_hat_blade/fox_atk_3.png" id="4_j4nxn"]
[ext_resource type="Texture2D" uid="uid://brlsobsd6xakk" path="res://assets/foxy/fox_hat/fox_defeat_2.png" id="5_65viv"]
[ext_resource type="Texture2D" uid="uid://bdq71dhw02evx" path="res://assets/foxy/fox_hat/fox_defeat_3.png" id="6_x7c3f"]
[ext_resource type="Texture2D" uid="uid://dgj1g1wg7ih15" path="res://assets/foxy/fox_hat/fox_fall_1.png" id="7_bjvpn"]
[ext_resource type="Texture2D" uid="uid://bk45euwmka7s4" path="res://assets/foxy/fox_hat/fox_hurt_1.png" id="8_s7qer"]
[ext_resource type="Texture2D" uid="uid://cxattqbafl635" path="res://assets/foxy/fox_hat/fox_hurt_2.png" id="9_g4c7l"]
[ext_resource type="Texture2D" uid="uid://bmmbhffur65ua" path="res://assets/foxy/fox_hat/fox_hurt_3.png" id="10_knn7v"]
[ext_resource type="Texture2D" uid="uid://2k4xtjydlijm" path="res://assets/foxy/fox_hat/fox_idle_1.png" id="11_7pqkx"]
[ext_resource type="Texture2D" uid="uid://bfgmbymecl48" path="res://assets/foxy/fox_hat/fox_idle_2.png" id="12_uw77l"]
[ext_resource type="Texture2D" uid="uid://68i3bbdvst68" path="res://assets/foxy/fox_hat/fox_jump_1.png" id="13_rptt4"]
[ext_resource type="Texture2D" uid="uid://hu3ckwqk2fux" path="res://assets/foxy/fox_hat/fox_run_1.png" id="14_r7pn3"]
[ext_resource type="Texture2D" uid="uid://cyol1va0p6wfj" path="res://assets/foxy/fox_hat/fox_run_2.png" id="15_b8hi5"]
[ext_resource type="Texture2D" uid="uid://brnkj48ftl7ii" path="res://assets/foxy/fox_hat/fox_run_3.png" id="16_2uvqg"]
[ext_resource type="Texture2D" uid="uid://c3p546j150735" path="res://assets/foxy/fox_hat/fox_run_4.png" id="17_1s1yo"]
[ext_resource type="Texture2D" uid="uid://cp2ag6s67gj73" path="res://assets/foxy/fox_hat_blade/fox_defeat_1.png" id="19_genst"]
[ext_resource type="Texture2D" uid="uid://bh18dgm068hhf" path="res://assets/foxy/fox_hat_blade/fox_hurt_1.png" id="19_wva7c"]
[ext_resource type="Texture2D" uid="uid://gg8v11cck4hu" path="res://assets/foxy/fox_hat_blade/fox_hurt_2.png" id="20_7obkq"]
[ext_resource type="Script" uid="uid://baer8l3qdsanc" path="res://scenes/player_finished/states/hurt.gd" id="20_8ydkj"]
[ext_resource type="Texture2D" uid="uid://cx3p62gjf57ep" path="res://assets/foxy/fox_hat_blade/fox_defeat_2.png" id="20_niom3"]
[ext_resource type="Script" uid="uid://csu2b21cwchqw" path="res://scripts/hurt_area_2d.gd" id="21_3j4b4"]
[ext_resource type="Texture2D" uid="uid://blvo22k8hckk0" path="res://assets/foxy/fox_hat_blade/fox_defeat_3.png" id="21_ttakn"]
[ext_resource type="Texture2D" uid="uid://cbfcke2rlqmtw" path="res://assets/foxy/fox_hat_blade/fox_hurt_3.png" id="21_vo27k"]
[ext_resource type="Texture2D" uid="uid://cv1omqfyyi3aj" path="res://assets/foxy/fox_hat_blade/fox_idle_1.png" id="22_genst"]
[ext_resource type="Script" uid="uid://w5tql7i2e5k1" path="res://scenes/player_finished/states/dead.gd" id="22_yj68g"]
[ext_resource type="Texture2D" uid="uid://d1wqqv8lwu0w0" path="res://assets/foxy/fox_hat_blade/fox_idle_2.png" id="23_niom3"]
[ext_resource type="Texture2D" uid="uid://cjob2r8khe2fs" path="res://assets/foxy/fox_hat_blade/fox_jump_1.png" id="24_ttakn"]
[ext_resource type="Texture2D" uid="uid://f0k2ocqkmcc2" path="res://assets/foxy/fox_hat_blade/fox_jump_atk_1.png" id="25_rw8a5"]
[ext_resource type="Script" uid="uid://duckwc07y8nc6" path="res://scenes/player_finished/states/attack.gd" id="26_6cv16"]
[ext_resource type="Texture2D" uid="uid://c8k8kn11ppnjp" path="res://assets/foxy/fox_hat_blade/fox_jump_atk_2.png" id="26_iwuka"]
[ext_resource type="Texture2D" uid="uid://dgis3lall2gw3" path="res://assets/foxy/fox_hat_blade/fox_run_1.png" id="27_hyqqp"]
[ext_resource type="Script" uid="uid://cskdv6tj5dtso" path="res://scripts/hit_area_2d.gd" id="27_j4nxn"]
[ext_resource type="Texture2D" uid="uid://cr8a68nw3dww1" path="res://assets/foxy/fox_hat_blade/fox_run_2.png" id="28_ds1xl"]
[ext_resource type="Texture2D" uid="uid://d0jfmp24jrfcy" path="res://assets/foxy/fox_hat_blade/fox_run_3.png" id="29_1u1sw"]
[ext_resource type="Texture2D" uid="uid://ce35c6mn7dcok" path="res://assets/foxy/fox_hat_blade/fox_run_4.png" id="30_2t3bg"]
[ext_resource type="Script" uid="uid://b8m342bxc521g" path="res://scripts/node2d_factory.gd" id="36_niom3"]
[ext_resource type="PackedScene" uid="uid://t6eh3b6jmdd7" path="res://scenes/player_finished/Knifde/knife.tscn" id="37_ttakn"]
[ext_resource type="Script" uid="uid://dp3lba7mnpcyn" path="res://scenes/player_finished/states/idle.gd" id="39_art4l"]
[ext_resource type="Script" uid="uid://bn74l4ngryo6x" path="res://scenes/player_finished/states/run.gd" id="40_fjxoa"]
[ext_resource type="Script" uid="uid://di3w8xw7t025o" path="res://scenes/player_finished/states/jump.gd" id="41_gswnw"]
[ext_resource type="Script" uid="uid://caxtbpdyga1ay" path="res://scenes/player_finished/states/fall.gd" id="42_xcnuv"]
[ext_resource type="Script" uid="uid://d3b3oq0ke0elu" path="res://scenes/player_finished/throw_knife.gd" id="45_rw8a5"]
[ext_resource type="Script" uid="uid://dc5snc336ey7m" path="res://scenes/player_finished/climb.gd" id="46_iwuka"]
[ext_resource type="Script" uid="uid://b1c75mhcvxpv8" path="res://scenes/player_finished/dash.gd" id="47_hyqqp"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_oul6g"]
radius = 9.0

[sub_resource type="SpriteFrames" id="SpriteFrames_ge24q"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_007i1")
}, {
"duration": 1.0,
"texture": ExtResource("3_6cv16")
}, {
"duration": 1.0,
"texture": ExtResource("4_j4nxn")
}],
"loop": false,
"name": &"attack",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_c35mf")
}, {
"duration": 1.0,
"texture": ExtResource("5_65viv")
}, {
"duration": 1.0,
"texture": ExtResource("6_x7c3f")
}],
"loop": false,
"name": &"dead",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("7_bjvpn")
}],
"loop": true,
"name": &"fall",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("8_s7qer")
}, {
"duration": 1.0,
"texture": ExtResource("9_g4c7l")
}, {
"duration": 1.0,
"texture": ExtResource("10_knn7v")
}],
"loop": false,
"name": &"hurt",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("11_7pqkx")
}, {
"duration": 1.0,
"texture": ExtResource("12_uw77l")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("13_rptt4")
}],
"loop": false,
"name": &"jump",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("14_r7pn3")
}, {
"duration": 1.0,
"texture": ExtResource("15_b8hi5")
}, {
"duration": 1.0,
"texture": ExtResource("16_2uvqg")
}, {
"duration": 1.0,
"texture": ExtResource("17_1s1yo")
}],
"loop": true,
"name": &"run",
"speed": 10.0
}]

[sub_resource type="SpriteFrames" id="SpriteFrames_j4nxn"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_007i1")
}, {
"duration": 1.0,
"texture": ExtResource("3_6cv16")
}, {
"duration": 1.0,
"texture": ExtResource("4_j4nxn")
}],
"loop": false,
"name": &"attack",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("19_genst")
}, {
"duration": 1.0,
"texture": ExtResource("20_niom3")
}, {
"duration": 1.0,
"texture": ExtResource("21_ttakn")
}],
"loop": false,
"name": &"dead",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("19_wva7c")
}, {
"duration": 1.0,
"texture": ExtResource("20_7obkq")
}, {
"duration": 1.0,
"texture": ExtResource("21_vo27k")
}],
"loop": true,
"name": &"hurt",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("22_genst")
}, {
"duration": 1.0,
"texture": ExtResource("23_niom3")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("24_ttakn")
}],
"loop": true,
"name": &"jump",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("25_rw8a5")
}, {
"duration": 1.0,
"texture": ExtResource("26_iwuka")
}],
"loop": false,
"name": &"jump_atk",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("22_genst")
}, {
"duration": 1.0,
"texture": ExtResource("23_niom3")
}],
"loop": false,
"name": &"knife",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("27_hyqqp")
}, {
"duration": 1.0,
"texture": ExtResource("28_ds1xl")
}, {
"duration": 1.0,
"texture": ExtResource("29_1u1sw")
}, {
"duration": 1.0,
"texture": ExtResource("30_2t3bg")
}],
"loop": true,
"name": &"run",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_yj68g"]
size = Vector2(22.6141, 24.8755)

[sub_resource type="CircleShape2D" id="CircleShape2D_28m0y"]
radius = 5.0

[node name="Player" type="CharacterBody2D"]
collision_layer = 2
script = ExtResource("1_wodsf")
max_health = 5
metadata/_custom_type_script = "uid://w7xdmsdvf5vd"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -14)
shape = SubResource("CapsuleShape2D_oul6g")

[node name="Direction" type="Node2D" parent="."]

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="Direction"]
process_mode = 4
visible = false
position = Vector2(0, -13)
sprite_frames = SubResource("SpriteFrames_ge24q")
animation = &"idle"
autoplay = "idle"

[node name="BladeAnimatedSprite2D" type="AnimatedSprite2D" parent="Direction"]
position = Vector2(0, -13)
sprite_frames = SubResource("SpriteFrames_j4nxn")
animation = &"dead"
autoplay = "idle"

[node name="HurtArea2D" type="Area2D" parent="Direction"]
collision_layer = 4
collision_mask = 0
script = ExtResource("21_3j4b4")
metadata/_custom_type_script = "uid://csu2b21cwchqw"

[node name="CollisionShape2D" type="CollisionShape2D" parent="Direction/HurtArea2D"]
position = Vector2(2.74181e-06, -10)
rotation = -3.14159
scale = Vector2(0.884404, 0.884404)
shape = SubResource("RectangleShape2D_yj68g")

[node name="HitArea2D" type="Area2D" parent="Direction"]
position = Vector2(14, -6)
collision_layer = 0
collision_mask = 16
script = ExtResource("27_j4nxn")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Direction/HitArea2D"]
shape = SubResource("CircleShape2D_28m0y")
disabled = true

[node name="KnifeFactory" type="Marker2D" parent="Direction"]
position = Vector2(26, -13)
script = ExtResource("36_niom3")
product_packed_scene = ExtResource("37_ttakn")
target_container_name = &"Knifes"

[node name="States" type="Node" parent="."]

[node name="Idle" type="Node" parent="States"]
script = ExtResource("39_art4l")

[node name="Run" type="Node" parent="States"]
script = ExtResource("40_fjxoa")

[node name="Jump" type="Node" parent="States"]
script = ExtResource("41_gswnw")

[node name="Fall" type="Node" parent="States"]
script = ExtResource("42_xcnuv")

[node name="Hurt" type="Node" parent="States"]
script = ExtResource("20_8ydkj")

[node name="Dead" type="Node" parent="States"]
script = ExtResource("22_yj68g")

[node name="Attack" type="Node" parent="States"]
script = ExtResource("26_6cv16")

[node name="ThrowKnife" type="Node" parent="States"]
script = ExtResource("45_rw8a5")

[node name="Climb" type="Node" parent="States"]
script = ExtResource("46_iwuka")

[node name="Dash" type="Node" parent="States"]
script = ExtResource("47_hyqqp")

[node name="RayCast2D" type="RayCast2D" parent="."]

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(2, 2)

[connection signal="animation_finished" from="Direction/AnimatedSprite2D" to="States/Attack" method="_on_animated_sprite_2d_animation_finished"]
[connection signal="hurt" from="Direction/HurtArea2D" to="." method="_on_hurt_area_2d_hurt"]
